# Programming-practice

./: .gitignore  2025adventofcode1.2.py  2025adventofcode3.1.py  2025adventofcode5.1.py  2025adventofcode5.2.py  CMakeLists.txt  README.md
2025/c++/: 2025adventofcode1.1.cpp  2025adventofcode1.2.cpp  2025adventofcode2.1.cpp
2025/python/: 2025adventofcode4.1.py  2025adventofcode4.2.py
CSES/: CMakeLists.txt
CSES/introductory_problems/: CMakeLists.txt  weird_algorithm.cpp
advent_of_code/: CMakeLists.txt
advent_of_code/2024/python/: 2024adventofcode1.1.py
advent_of_code/2025/: CMakeLists.txt
advent_of_code/2025/day_02/: 2025adventofcode2.2.cpp  2025adventofcode2.2.py
advent_of_code/2025/day_06/: 2025adventofcode6.1.py  2025adventofcode6.2.py
project_euler/: CMakeLists.txt  problem_0.cpp
project_euler/problems_1-100/: CMakeLists.txt
project_euler/problems_1-100/problems_1-10/: CMakeLists.txt  p_1.cpp  p_2.cpp  p_3.cpp  p_7.cpp
project_euler/problems_1-100/problems_11-20/: CMakeLists.txt  p_14.cpp  p_14.py
